conserto nos links

--- a/estatica-simples/livros.html
+++ b/estatica-simples/livros.html
@@ -21,17 +21,17 @@
 					<table style="width:300px">
 						<tr>
 						  <td>
-							<form method="get" action="/Users/Bruna/Desktop/git/si1-lab1/estatica-simples/index.html">
+							<form method="get" action="index.html">
 								<button style="width:150;height:120; font-size: 25px">Home</button>
 							</form>
 						  </td>
 						  <td>
-							<form method="get" action="/Users/Bruna/Desktop/git/si1-lab1/estatica-simples/matricula.html">
+							<form method="get" action="matricula.html">
 								<button style="width:150;height:120; font-size: 25px">Matrícula</button>
 							</form>							  
 						  </td> 
 						  <td>
-							<form method="get" action="/Users/Bruna/Desktop/git/si1-lab1/estatica-simples/livros.html">
+							<form method="get" action="livros.html">
 								<button style="width:150;height:120; font-size: 25px">Livros</button>
 							</form>	
 						  </td>
