--- a/estatica-simples/index.html
+++ b/estatica-simples/index.html
@@ -21,17 +21,17 @@
 					<table style="width:300px">
 						<tr>
 						  <td>
-							<form method="get" action="/Users/Bruna/Desktop/git/si1-lab1/estatica-simples/index.html">
+							<form method="get" action="index.html">
 								<button style="width:150;height:120; font-size: 25px">Home</button>
 							</form>
 						  </td>
 						  <td>
-							<form method="get" action="/Users/Bruna/Desktop/git/si1-lab1/estatica-simples/matricula.html">
+							<form method="get" action="matricula.html">
 								<button style="width:150;height:120; font-size: 25px">Matrícula</button>
 							</form>							  
 						  </td> 
 						  <td>
-							<form method="get" action="/Users/Bruna/Desktop/git/si1-lab1/estatica-simples/livros.html">
+							<form method="get" action="livros.html">
 								<button style="width:150;height:120; font-size: 25px">Livros</button>
 							</form>	
 						  </td>
@@ -84,7 +84,7 @@
 				</div>
 			<div>
 					<aside align = "center">
-						<img align="top" height= "15%" width = "15%" src="C:\Users\Bruna\Desktop\git\si1-lab1\estatica-simples\good_code.PNG"/>
+						<img align="top" height= "15%" width = "15%" src="good_code.PNG"/>
 					</aside>
 			</div>
 			</div>
