--- a/dinamica/index.html
+++ b/dinamica/index.html
@@ -35,7 +35,7 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="matricula.html">Matrícula</a></li>
-				<li><a href="lista.html">Lista de interesse</a></li>				
+				<li><a href="lista.html">Assuntos de interesse</a></li>				
 			</ul>
 			</div><!--/.nav-collapse -->
 		</div>
