--- a/dinamica/matricula.html
+++ b/dinamica/matricula.html
@@ -47,7 +47,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">Home</a></li>
 					<li  class="active"><a href="matricula.html">Matrícula</a></li>
-					<li><a href="lista.html">Lista de interesse</a></li>				
+					<li><a href="lista.html">Assuntos de interesse</a></li>				
 				</ul>
 				</div><!--/.nav-collapse -->
 			</div>
