--- a/estatica-simples/index.html
+++ b/estatica-simples/index.html
@@ -84,7 +84,7 @@
 				</div>
 			<div>
 					<aside align = "center">
-						<img align="top" height= "15%" width = "15%" src="good_code.PNG"/>
+						<img align="top" height= "15%" width = "15%" src="good_code.png"/>
 					</aside>
 			</div>
 			</div>
