--- a/estatica-css/index.html
+++ b/estatica-css/index.html
@@ -62,7 +62,7 @@
 			</section>
 			
 			<aside id = "aside">
-					<img  src="C:\Users\Bruna\Desktop\git\si1-lab1\estatica-simples\good_code.PNG"/>
+					<img  src="good_code.png"/>
 			</aside>
 			
 			<a href="matricula.html">Me convenci!</a>
